# lerobot_ros2

./: .gitignore  .gitmodules  DEVELOPMENT.md  README.md  init.sh  test_model_on_dataset.sh  快捷键485.py
algorithms/: __init__.py  infer_act.py  train_act.py  train_demo.py
algorithms/policies/: __init__.py  factory.py
algorithms/policies/act/: processor_act.py
examples/: README.md  dataset_info.py  demo_control.py  demo_grasp.py  demo_move.py  demo_record.py  grasp_record.py  infer_act.py  train_demo.py  visualize_dataset_v2.py  visualize_pcd.py  visualize_ros2_dataset.py
examples/Cr5_ACT/: auto_grasp_record.py
examples/Dataset/: dataset_info.py  visualize_dataset_v2.py  visualize_pcd.py
examples/Dr5_ACT/: demo_control.py
examples/IsaacSim/: README.md  inference.py  motion_generation.py  record_datasets.py  run_motion_generation.py  run_train.py  train.py
examples/IsaacSim/Agibot_G1/: README.md
examples/IsaacSim/Agibot_G1/scripts/: grasp_config.py  grasp_single_demo.py  handover_demo.py  pickup_return_demo.py  robot_config.py
examples/IsaacSim/DobotCR5/: README.md
examples/IsaacSim/DobotCR5/scripts/: data_convert_to_lerobot.py  grasp_config.py  grasp_record_dataset.py  inference.py  (+2 more)
examples/IsaacSim/common/: demo_preset_utils.py  handover_demo_common.py  isaac_ros2_sim_common.py  pick_place_flow_demo_common.py  pickup_return_demo_common.py  task_config_io.py
examples/IsaacSim/docs/: TASK_CONFIG_YAML.md  TASK_QUEUE_ARCHITECTURE.md
examples/IsaacSim/online_infer/: __init__.py  core.py  ui.py
examples/IsaacSim/policy_training/: train.py
examples/IsaacSim/robots/: __init__.py  dobot_cr5.json  registry_loader.py
examples/IsaacSim_DobotCR5/: README.md
examples/IsaacSim_DobotCR5/scripts/: Simulation Inference.py  convert_raw_to_lerobot.py  data_convert_to_lerobot.py  demo_grasp.py  grasp_config.py  grasp_motion_primitives.py  grasp_record_dataset.py  grasp_single_demo.py  inference.py  isaac_ros2_sim_common.py  train.py  train_demo.py
examples/Tianji_dual_XVLA/: auto_grasp_record.py  lerobot_absolute_replay.py
grasp_dataset_1763027021/data/chunk-000/: file-000.parquet
grasp_dataset_1763027021/meta/: info.json  stats.json  tasks.parquet
lerobot_camera_ros2/: pyproject.toml
lerobot_camera_ros2/lerobot_camera_ros2/: __init__.py  camera.py  config.py
lerobot_camera_ros2/lerobot_camera_ros2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lerobot_robot_ros2/: pyproject.toml
lerobot_robot_ros2/lerobot_robot_ros2/: __init__.py  config.py  demo_flows.py  motion_generation.py  robot.py  ros_interface.py
lerobot_robot_ros2/lerobot_robot_ros2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lerobot_robot_ros2/lerobot_robot_ros2/utils/: __init__.py  pose_utils.py
ros2_robot_interface/: README.md  pyproject.toml  test.md  test_interface.py  test_interface_isaac.py  test_w2_path.py  w2轨迹测试.txt
ros2_robot_interface/ros2_robot_interface/: __init__.py  config.py  exceptions.py  ros_interface.py
(+112 files in other folders)
