[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_ros2"
version = "0.1.0"
description = "LeRobot ROS2 robot integration"
authors = [
    {name = "Huang Zhenbiao", email = "biao876990970@hotmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["robotics", "deep learning", "pytorch", "ros2", "lerobot"]
dependencies = [
    "lerobot",
    "ros2-robot-interface",
]

[project.urls]
Homepage = "https://github.com/huggingface/lerobot"
Repository = "https://github.com/huggingface/lerobot"
Documentation = "https://huggingface.co/docs/lerobot"

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_robot_ros2*"]

[tool.setuptools.package-data]
lerobot_robot_ros2 = ["py.typed"]
