[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-robot-interface"
version = "0.1.0"
description = "Standalone ROS 2 robot interface for communicating with robots through topics"
authors = [
    {name = "Huang Zhenbiao", email = "biao876990970@hotmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["robotics", "ros2", "robot", "interface"]
dependencies = [
    "rclpy",
    "sensor-msgs",
    "geometry-msgs",
    "std-msgs",
    "nav-msgs",
    "numpy",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/huggingface/lerobot"
Repository = "https://github.com/huggingface/lerobot"
Documentation = "https://huggingface.co/docs/lerobot"

[tool.setuptools.packages.find]
where = ["."]
include = ["ros2_robot_interface*"]

[tool.setuptools.package-data]
ros2_robot_interface = ["py.typed"]

